--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+cython
+numpy<2.0
 openai-clip
 scikit-learn
 opencv-python
@@ -5,15 +7,23 @@ torchdiffeq
 beautifulsoup4
 open_clip_torch
 scikit-image
-cython
 git+https://github.com/philferriere/cocoapi.git#egg=pycocotools&subdirectory=PythonAPI
 matplotlib
-accelerate==0.12.0
+# accelerate==0.12.0
 absl-py
 ml_collections
 einops
 wandb
 ftfy==6.1.1
-transformers==4.23.1
+# transformers==4.23.1
+triton==2.1.0
 timm
 tensorboard
+sentencepiece
+# pixart
+diffusers==0.29.2
+transformers==4.36.1
+accelerate==0.25.0
+mmcv==1.7.0
+xformers==0.0.23.post1
+came-pytorch==0.1.3
